<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4330460271648457/4113406127</string>

    <!-- Main -->
    <string name="app_name" translatable="false">Pronofoot</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Lougout</string>
    <string name="forum_link_label">Support / Suggestions</string>
    <string name="reglement_link_label">Rules</string>
    <string name="espace_pronostique">Betting zone</string>
    <string name="home">Results</string>

    <!-- Partie Profil -->
    <string name="page_profile">Settings</string>
    <string name="username" translatable="false">Aurelienazerty</string>
    <string name="label_notification">Receive notifications</string>
    <string name="label_information">Receive information</string>
    <string name="label_newsletter">Receive newsletter</string>
    <string name="label_home_page">Start on result page</string>
    <string name="label_publicite">Show ads</string>
    <string name="error_loading_profil">Failed to load profile</string>
    <string name="error_modifier_profil">Failed to update profile</string>
    <string name="label_save_profil">Save</string>
    <string name="label_more_profil">Online profile</string>

    <!-- Partie résultats -->
    <string name="page_classement_point">Rank</string>
    <string name="page_classement_pourcent">% Rank</string>
    <string name="page_derniere_grille">Last result</string>
    <string name="no_classement">No rank</string>
    <string name="error_loading_classement">Failed to load ranking, try &lt;a href=https://foot.team-azerty.com/>on website&lt;/a></string>
    <string name="error_loading_resultat">Failed to load last result, try &lt;a href=https://foot.team-azerty.com/>on website&lt;/a></string>
    <string name="label_nom_grille">Grid name</string>
    <string name="grille_date" translatable="false">27/10 11:25</string>
    <string name="format_date">dd/MM hh:mm a</string>
    <string name="unite_point">Points</string>
    <string name="unite_pourcent" translatable="false">%</string>
    <string name="unite_classement">th</string>

    <!-- Partie pronostique -->
    <string name="info_no_null">No draw mach</string>
    <string name="info_prolongation">Result after the full-time (no extra-time score)</string>
    <string name="page_grille">Bet</string>
    <string name="page_resultat">Result</string>
    <string name="label_victoire_domicile" translatable="false">1</string>
    <string name="label_victoire_null" translatable="false">N</string>
    <string name="label_victoire_exterieur" translatable="false">2</string>
    <string name="label_equipe_domicile" translatable="false">ASF Andrézieux-Bouthéon</string>
    <string name="label_equipe_exterieure" translatable="false">Zénith Saint-Pétersbourg</string>
    <string name="no_grille">No grid, click to reload, try &lt;a href=https://foot.team-azerty.com/>on website&lt;/a></string>
    <string name="submit_grille">Send my bet</string>
    <string name="msg_prono_save">Bet saved</string>
    <string name="error_sending_prono">Failed to send you bet</string>
    <string name="label_voir_grille">See the grid</string>
    <string name="error_loading_list_grille">Failed to load the grids</string>
    <string name="label_legende">Captation :</string>
    <string name="label_legende_bon_prono">Bet is correct</string>
    <string name="label_legende_mauvais_prono">Bad bet</string>
    <string name="label_legende_resultat">Result (in case off bad bet)</string>
    <string name="wait">Wait</string>
    <string name="msg_sending_prono">Sending bet</string>

    <!-- Partie push -->
    <string name="alerte_pronofoot">Pronofoot notification</string>
    <string name="ignore">Ignore</string>
    <string name="open">Open</string>

    <!-- AuthenticatorActivity -->
    <string name="label_username">Username</string>
    <string name="label_username_register">Username (min 5 alphanumeric characters)</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Login </string>
    <string name="label_sign_up">Register</string>
    <string name="message_signing_in">Login…</string>
    <string name="blank_field_warning">Please fill the fields</string>
    <string name="signup_link">New user ? &lt;a href=https://www.team-azerty.com/forum/ucp.php?mode=register>register here&lt;/a>.</string>
    <string name="message_bad_credentials">Login or password incorrect</string>
    <string name="message_auth_failed">Please fill a password</string>
    <string name="message_auth_failed_new_account">Please fill  a valid login and password</string>
    <string name="error_connect">Login or password incorrect</string>
    <string name="error_network">Can not connect</string>
    <string name="lost_password">&lt;a href=https://www.team-azerty.com/forum/ucp.php?mode=sendpassword>I lost my password&lt;/a></string>

    <!-- Register -->
    <string name="label_password_register">Password (min 5 characters)</string>
    <!--
    <string name="label_password_bis">Retype password</string>
    <string name="label_password_error">Password doesn\t matchs</string>
    -->
    <string name="label_mail">Valid email</string>
    <string name="mail_error">Invalid or existing email</string>
    <string name="username_error">Invalid or existing username</string>
    <string name="register_finish">Registration is completed, you can login with your login and password</string>

    <!-- Stat User -->
    <string name="label_saison">/ season</string>
    <string name="saison" translatable="false">2014-2015</string>
    <string name="label_competition">Competition</string>
    <string name="label_point">Points</string>
    <string name="no_partcipation">No participation</string>
    <string name="label_more_stat">More statistics</string>
    <string name="no_stat">No Statistic</string>
    <string name="error_loading_stats">Failed to load user statistic</string>
    <string name="error_loading_grille">Failed to load the grid</string>
    <string name="label_pourcent" translatable="false">%</string>

</resources>