<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/MainConteneur">

    <TextView
        android:id="@+id/stat_user"
        android:text="@string/username"
        style="@style/TextBig"
        android:height="64dp"
        android:drawableLeft="@drawable/ic_medal"
    />

    <TextView
        android:id="@+id/stat_lblsaison"
        android:text="@string/label_saison"
        android:height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="3dp"
        android:layout_toLeftOf="@+id/stat_saison"
        style="@style/HeaderTableau"/>

    <TextView
        android:id="@+id/stat_saison"
        android:text="@string/saison"
        android:height="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/HeaderTableau"/>

    <TextView
        android:id="@+id/stat_lblcompetition"
        style="@style/TextPronofoot"
        android:text="@string/label_competition"
        android:layout_below="@+id/stat_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/stat_lblpoint"
        style="@style/TextPronofoot"
        android:text="@string/label_point"
        android:textStyle="italic"
        android:layout_alignTop="@+id/stat_lblcompetition"
        android:layout_alignBottom="@+id/stat_lblcompetition"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="70dp" />

    <TextView
        android:id="@+id/stat_lblpourcent"
        style="@style/TextPronofoot"
        android:text="@string/label_pourcent"
        android:layout_alignTop="@+id/stat_lblcompetition"
        android:layout_alignBottom="@+id/stat_lblcompetition"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="italic" />

</RelativeLayout>