<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainConteneur">


    <RadioGroup
        android:id="@+id/grille_resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_column="1"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/grille_resultat_domicile"
            style="@style/RadioButtonPronofoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|left" />

        <RadioButton
            android:id="@+id/grille_resultat_null"
            style="@style/RadioButtonPronofoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/grille_resultat_exterieur"
            style="@style/RadioButtonPronofoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|left" />

    </RadioGroup>

    <TextView
        android:id="@+id/grille_resultat_date_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_vertical|left"
        android:text="@string/grille_date"
        android:layout_below="@+id/grille_id_match"
        style="@style/DateProno"
    />

    <TextView
        android:id="@+id/grille_resultat_equipe_domicile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/grille_resultat"
        android:layout_toRightOf="@+id/grille_resultat_date_match"
        android:gravity="center_vertical|right"
        android:text="@string/label_equipe_domicile"
        style="@style/NomEquipe" />

    <TextView
        android:id="@+id/grille_resultat_equipe_exterieur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/grille_resultat"
        android:gravity="center_vertical|left"
        android:text="@string/label_equipe_exterieure"
        style="@style/NomEquipe" />


</RelativeLayout>